--- a/trunk/web/WEB-INF/pages/structure/cpinsert.vm
+++ b/trunk/web/WEB-INF/pages/structure/cpinsert.vm
@@ -3,7 +3,7 @@
 <br>
 <div id="conbg">
 <div class=contitle>
-<div class=leftmain>拷贝表结构</div>
+<div class=leftmain>复制添加信息分类</div>
 <div class=rightmain>&nbsp;&nbsp;<a href="/structure/actions.html?method=list">&#171;返回</a></div>
 <div class=rightmain></div>
 </div>
