--- a/trunk/web/WEB-INF/pages/infosort/update.vm
+++ b/trunk/web/WEB-INF/pages/infosort/update.vm
@@ -3,7 +3,9 @@
 <table width="100%"><tr><td><div id=msg></div></td></tr></table>
 <div id="conbg">
 <div class=contitle>
-<div class=leftmain>编辑信息分类</div>
+<div class=leftmain>位置：#foreach($biz in $infoSortDtoList)
+ 	$biz.name &gt;
+ #end 编辑信息分类</div>
 <div class=rightmain>&nbsp;&nbsp;<a href="/infosort/actions.html?method=list">&#171;返回</a></div>
 <div class=rightmain></div>
 </div>
