--- a/web/WEB-INF/pages/file/list.vm
+++ b/web/WEB-INF/pages/file/list.vm
@@ -5,7 +5,7 @@
 #set($addNewLinkText = "ÐÂÔö$!infoSort.oneFloor")
 #parse( "/WEB-INF/pages/common/search_add_new_link.vm" )
 #end
-#set($urlPre = "/file/actions.html?method=list&cm=$cm")
+#set($urlPre = "/file/actions.html?method=list&oc=all&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt($status)&cm=$cm&pageSize=$!pageSize")
 
 <iframe width=174 height=172 name="gToday:normal:/scripts/time/agenda.js" src="/scripts/time/ipopeng.htm" scrolling="no"
         frameborder="0" style="visibility:visible; z-index:999; position:absolute; left:-500px; top:0px;"></iframe>
