--- a/trunk/web/WEB-INF/pages/accessory/form.vm
+++ b/trunk/web/WEB-INF/pages/accessory/form.vm
@@ -4,6 +4,11 @@
 		<div id="listheadrightimg"></div>
 	</div>
 	<table width="99%" border="0" cellpadding="0" cellspacing="0" >
+	#if(!$dh)
+	<tr><td>
+		<font color=red>档号未设置，可能影响原文的正常使用。请联系管理员进行设置!</font>
+	</td></tr>
+	#end
           <tr>
             <td class="tableheadingbg">文件路径</td>
 			<td class="tableheadingbg">操作</td>
